improved file utilities